Cleanup plus containers

--- a/ansible/playbooks/dev-host.yml
+++ b/ansible/playbooks/dev-host.yml
@@ -20,7 +20,5 @@
     - import_tasks: ../tasks/dev-common.yml
     - import_tasks: ../tasks/dev-platform.yml
     - import_tasks: ../tasks/php.yml
-    - import_tasks: ../tasks/dev-sql-server.yml
-    # - import_tasks: ../tasks/docker.yml
-    # - import_tasks: ../tasks/dev.yml
-    # - import_tasks: ../tasks/dev-user.yml
+    #- import_tasks: ../tasks/dev-sql-server.yml
+    - import_tasks: ../tasks/containers.yml
