--- a/ansible/playbooks/dev-host.yml
+++ b/ansible/playbooks/dev-host.yml
@@ -1,25 +1,33 @@
 ---
-- hosts: "simon-dev"
-  name: Setup and configure developer server
+- hosts: all
+  name: Setup and configure development environments
   serial: 1
   gather_facts: false
   any_errors_fatal: true
   become_user: root
 
-  vars_files:
-    - ../secrets.yml
+  #vars_files:
+  #  - ../secrets.yml
 
   pre_tasks:
     - name: Ensure python is installed
-      raw: test -e /usr/bin/python3 || (apt-get -y update && apt-get -y install python)
+      raw: test -e /usr/bin/python3 || (apt-get -y update && apt-get -y install python3)
       changed_when: false
     - setup: # aka gather_facts
 
   tasks:
+
     - import_tasks: ../tasks/common.yml
+
+    - import_tasks: ../tasks/common-remote.yml
+      when:  ansible_connection != 'local'
+
     - import_tasks: ../tasks/dev-common.yml
     - import_tasks: ../tasks/dev-platform.yml
+
     - import_tasks: ../tasks/php.yml
+    - import_tasks: ../tasks/go.yml
+
     #- import_tasks: ../tasks/dev-sql-server.yml
-    - import_tasks: ../tasks/containers.yml
+    #- import_tasks: ../tasks/containers.yml
     #- import_tasks: ../tasks/mariadb.yml
